--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <label class="primeirolabel">Nome </label>
                 <input class="sobrenome" type="text" name="sobre_nome">
                 <label class="sobrenomelabel">Sobrenome</label>
-            </div>Nikolas Josel
+            </div>GitGitGit
 
     </div>
     </form>
