--- a/index.html
+++ b/index.html
@@ -25,27 +25,15 @@
                 <label class="primeirolabel">Nome </label>
                 <input class="sobrenome" type="text" name="sobre_nome">
                 <label class="sobrenomelabel">Sobrenome</label>
-            </div>GitGitGit
+            </div>
+            <h2 class="nome">Empresa</h2>
+            <input class="empresa" type="text" name="empresa">
 
+            <h2 class="nome">E-mail</h2>
+            <input class="email" type="text" name="email">
+
+        </form>
     </div>
-    </form>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
