--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -32,6 +33,8 @@
             <h2 class="nome">E-mail</h2>
             <input class="email" type="text" name="email">
 
+            <h2 class="nome">Telefone com DDD</h2>
+            <input class="codigo" type="text" name="codigo_area">
         </form>
     </div>
 </body>
