--- a/index.html
+++ b/index.html
@@ -35,6 +35,20 @@
 
             <h2 class="nome">Telefone com DDD</h2>
             <input class="codigo" type="text" name="codigo_area">
+            <label class="codigo_area">DDD</label>
+            <input class="number" type="text" name="phone">
+            <label class="numero-telefone">Telefone</label>
+
+            <h2 class="nome">Sexo</h2>
+
+            <select class="opicoes" name="assunto">
+                <option>Masculino</option>
+                 <option>Feminino</option>   
+            </select>
+
+
+
+
         </form>
     </div>
 </body>
