--- a/index.html
+++ b/index.html
@@ -44,10 +44,7 @@
             <select class="opicoes" name="assunto">
                 <option>Masculino</option>
                  <option>Feminino</option>   
-            </select>
-
-
-
+            </select> ssa
 
         </form>
     </div>
