--- a/index.html
+++ b/index.html
@@ -42,9 +42,26 @@
             <h2 class="nome">Sexo</h2>
 
             <select class="opicoes" name="assunto">
+                <option disabled="disabled" selected="selected">-- Selecione a opcao</option>
                 <option>Masculino</option>
                  <option>Feminino</option>   
-            </select> ssa
+            </select>
+
+            <h2 class="nivel">Você é iniciante?</h2>
+
+            <label class="radio">
+                <input class="radio-one" type="radio" name="radio" checked="checked" name="">
+                <span class="checkmark"></span>
+                sim
+            </label>
+
+
+            <label class="radio">
+                <input class="radio-two" type="radio" name="radio" checked="checked" name="">
+                <span class="checkmark"></span>
+                Não
+            </label>
+            <button type="submit">Enviar</button>
 
         </form>
     </div>
